--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,7 @@
 include /usr/share/pkg-kde-tools/qt-kde-team/2/debian-qt-kde.mk
 
 override_dh_strip:
-	dh_strip --dbg-package=libkf5xmlgui5-dbg
+	$(overridden_command) --dbg-package=libkf5xmlgui4-dbg
 
 override_dh_auto_test:
 	dh_installwm openbox\
