--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Kubuntu Developers <kubuntu-devel@lists.ubuntu.com>
 XSBC-Original-Maintainer: Scarlett Clark <scarlett@scarlettgatelyclark.com>
 Build-Depends: debhelper (>= 9.0.0), cmake, pkg-kde-tools,
- extra-cmake-modules (>= 0.0.11), qtbase5-dev, libqt5x11extras-dev, 
+ extra-cmake-modules (>= 0.0.11), qtbase5-dev, libqt5x11extras5-dev, 
  xauth, xvfb, openbox, libkf5attica-dev (>= 4.98.0),
  libkf5globalaccel-dev (>= 4.98.0), libkf5textwidgets-dev (>= 4.98.0),
  libkf5itemviews-dev (>= 4.98.0), libkf5config-dev (>= 4.98.0),
