--- a/debian/control
+++ b/debian/control
@@ -3,42 +3,47 @@ Section: libs
 Priority: optional
 Maintainer: Kubuntu Developers <kubuntu-devel@lists.ubuntu.com>
 XSBC-Original-Maintainer: Scarlett Clark <scarlett@scarlettgatelyclark.com>
-Build-Depends: debhelper (>= 9.0.0), cmake, pkg-kde-tools,
- extra-cmake-modules (>= 0.0.13), qtbase5-dev, libqt5x11extras5-dev, 
- xauth, xvfb, openbox, libkf5attica-dev (>= 4.99.0),
- libkf5globalaccel-dev (>= 4.99.0), libkf5textwidgets-dev (>= 4.99.0),
- libkf5itemviews-dev (>= 4.99.0), libkf5config-dev (>= 4.99.0),
- libkf5configwidgets-dev (>= 4.99.0), libkf5auth-dev (>= 4.99.0),
- libkf5coreaddons-dev (>= 4.99.0), libkf5codecs-dev (>= 4.99.0),
- libkf5guiaddons-dev (>= 4.99.0), libkf5i18n-dev (>= 4.99.0),
- libkf5kjs-dev (>= 4.99.0), libkf5widgetsaddons-dev (>= 4.99.0),
- libkf5iconthemes-dev (>= 4.99.0), libkf5completion-dev (>= 4.99.0),
- libkf5service-dev (>= 4.99.0), libkf5dbusaddons-dev (>= 4.99.0),
- libkf5windowsystem-dev (>= 4.99.0), libkf5sonnet-dev (>= 4.99.0) 
+Build-Depends: cmake,
+               debhelper (>= 9.0.0),
+               extra-cmake-modules (>= 0.0.13),
+               libkf5attica-dev (>= 4.99.0),
+               libkf5auth-dev (>= 4.99.0),
+               libkf5codecs-dev (>= 4.99.0),
+               libkf5completion-dev (>= 4.99.0),
+               libkf5config-dev (>= 4.99.0),
+               libkf5configwidgets-dev (>= 4.99.0),
+               libkf5coreaddons-dev (>= 4.99.0),
+               libkf5dbusaddons-dev (>= 4.99.0),
+               libkf5globalaccel-dev (>= 4.99.0),
+               libkf5guiaddons-dev (>= 4.99.0),
+               libkf5i18n-dev (>= 4.99.0),
+               libkf5iconthemes-dev (>= 4.99.0),
+               libkf5itemviews-dev (>= 4.99.0),
+               libkf5kjs-dev (>= 4.99.0),
+               libkf5service-dev (>= 4.99.0),
+               libkf5sonnet-dev (>= 4.99.0),
+               libkf5textwidgets-dev (>= 4.99.0),
+               libkf5widgetsaddons-dev (>= 4.99.0),
+               libkf5windowsystem-dev (>= 4.99.0),
+               libqt5x11extras5-dev,
+               openbox,
+               pkg-kde-tools,
+               qtbase5-dev,
+               xauth,
+               xvfb
 Standards-Version: 3.9.5
 Homepage: https://projects.kde.org/projects/frameworks/kxmlgui
 
-Package: libkf5xmlgui-dev
-Section: libdevel
-Architecture: any
-Depends: libkf5xmlgui5 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
-Description: User configurable main windows.
- framework for designing the user interface
- of an application using XML, using the idea 
- of actions.
- .
- Contains development files for kxmlgui.
- 
 Package: libkf5xmlgui5
-Architecture: any
-Multi-Arch: allowed
 Section: doc
-Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Architecture: any
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: User configurable main windows.
  framework for designing the user interface
- of an application using XML, using the idea 
+ of an application using XML, using the idea
  of actions.
+Multi-Arch: allowed
+Pre-Depends: ${misc:Pre-Depends}
 
 Package: libkf5xmlgui5-dbg
 Priority: extra
@@ -48,7 +53,7 @@ Multi-Arch: allowed
 Depends: libkf5xmlgui5 (= ${binary:Version}), ${misc:Depends}
 Description: User configurable main windows.
  framework for designing the user interface
- of an application using XML, using the idea 
+ of an application using XML, using the idea
  of actions.
  .
  Contains debug symbols for kxmlgui.
