--- a/debian/control
+++ b/debian/control
@@ -42,14 +42,13 @@ Description: User configurable main windows.
  framework for designing the user interface
  of an application using XML, using the idea
  of actions.
-Multi-Arch: allowed
+Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 
 Package: libkf5xmlgui5-dbg
 Priority: extra
 Section: debug
 Architecture: any
-Multi-Arch: allowed
 Depends: libkf5xmlgui5 (= ${binary:Version}), ${misc:Depends}
 Description: User configurable main windows.
  framework for designing the user interface
