--- a/debian/control
+++ b/debian/control
@@ -5,26 +5,26 @@ Maintainer: Kubuntu Developers <kubuntu-devel@lists.ubuntu.com>
 XSBC-Original-Maintainer: Scarlett Clark <scarlett@scarlettgatelyclark.com>
 Build-Depends: cmake,
                debhelper (>= 9.0.0),
-               extra-cmake-modules (>= 0.0.13),
-               libkf5attica-dev (>= 4.99.0),
-               libkf5auth-dev (>= 4.99.0),
-               libkf5codecs-dev (>= 4.99.0),
-               libkf5completion-dev (>= 4.99.0),
-               libkf5config-dev (>= 4.99.0),
-               libkf5configwidgets-dev (>= 4.99.0),
-               libkf5coreaddons-dev (>= 4.99.0),
-               libkf5dbusaddons-dev (>= 4.99.0),
-               libkf5globalaccel-dev (>= 4.99.0),
-               libkf5guiaddons-dev (>= 4.99.0),
-               libkf5i18n-dev (>= 4.99.0),
-               libkf5iconthemes-dev (>= 4.99.0),
-               libkf5itemviews-dev (>= 4.99.0),
-               libkf5kjs-dev (>= 4.99.0),
-               libkf5service-dev (>= 4.99.0),
-               libkf5sonnet-dev (>= 4.99.0),
-               libkf5textwidgets-dev (>= 4.99.0),
-               libkf5widgetsaddons-dev (>= 4.99.0),
-               libkf5windowsystem-dev (>= 4.99.0),
+               extra-cmake-modules (>= 0.0.14),
+               libkf5attica-dev (>= 4.100.0),
+               libkf5auth-dev (>= 4.100.0),
+               libkf5codecs-dev (>= 4.100.0),
+               libkf5completion-dev (>= 4.100.0),
+               libkf5config-dev (>= 4.100.0),
+               libkf5configwidgets-dev (>= 4.100.0),
+               libkf5coreaddons-dev (>= 4.100.0),
+               libkf5dbusaddons-dev (>= 4.100.0),
+               libkf5globalaccel-dev (>= 4.100.0),
+               libkf5guiaddons-dev (>= 4.100.0),
+               libkf5i18n-dev (>= 4.100.0),
+               libkf5iconthemes-dev (>= 4.100.0),
+               libkf5itemviews-dev (>= 4.100.0),
+               libkf5kjs-dev (>= 4.100.0),
+               libkf5service-dev (>= 4.100.0),
+               libkf5sonnet-dev (>= 4.100.0),
+               libkf5textwidgets-dev (>= 4.100.0),
+               libkf5widgetsaddons-dev (>= 4.100.0),
+               libkf5windowsystem-dev (>= 4.100.0),
                libqt5x11extras5-dev,
                openbox,
                pkg-kde-tools,
@@ -37,16 +37,18 @@ Homepage: https://projects.kde.org/projects/frameworks/kxmlgui
 Package: libkf5xmlgui-dev
 Section: libdevel
 Architecture: any
-Depends: libkf5xmlgui5 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends},
- libkf5config-dev,
- libkf5configwidgets-dev,
- libkf5globalaccel-dev,
- libkf5iconthemes-dev,
- libkf5itemviews-dev,
- libkf5textwidgets-dev,
- libkf5windowsystem-dev,
- qtbase5-dev,
- libkf5attica-dev
+Depends: libkf5attica-dev,
+         libkf5config-dev,
+         libkf5configwidgets-dev,
+         libkf5globalaccel-dev,
+         libkf5iconthemes-dev,
+         libkf5itemviews-dev,
+         libkf5textwidgets-dev,
+         libkf5windowsystem-dev,
+         libkf5xmlgui5 (= ${binary:Version}),
+         qtbase5-dev,
+         ${misc:Depends},
+         ${shlibs:Depends}
 Description: User configurable main windows.
  framework for designing the user interface
  of an application using XML, using the idea
