fix watch, add VCS

--- a/debian/control
+++ b/debian/control
@@ -33,6 +33,8 @@ Build-Depends: cmake,
                xvfb
 Standards-Version: 3.9.5
 Homepage: https://projects.kde.org/projects/frameworks/kxmlgui
+Vcs-Browser: http://bazaar.launchpad.net/~kubuntu-packagers/kubuntu-packaging-next/kxmlgui
+Vcs-Bzr: https://code.launchpad.net/~kubuntu-packagers/kubuntu-packaging-next/kxmlgui
 
 Package: libkf5xmlgui-dev
 Section: libdevel
