--- a/debian/control
+++ b/debian/control
@@ -28,18 +28,7 @@ Vcs-Git: git://anonscm.debian.org/pkg-kde/frameworks/kxmlgui.git
 Package: libkf5xmlgui-dev
 Section: libdevel
 Architecture: any
-Depends: libkf5attica-dev (>= 5.6.0),
-         libkf5config-dev (>= 5.6.0),
-         libkf5configwidgets-dev (>= 5.6.0),
-         libkf5globalaccel-dev (>= 5.6.0),
-         libkf5iconthemes-dev (>= 5.6.0),
-         libkf5itemviews-dev (>= 5.6.0),
-         libkf5textwidgets-dev (>= 5.6.0),
-         libkf5windowsystem-dev (>= 5.6.0),
-         libkf5xmlgui5 (= ${binary:Version}),
-         qtbase5-dev (>= 5.2.0),
-         ${misc:Depends},
-         ${shlibs:Depends}
+Depends: libkf5attica-dev (>= 5.7.0~), libkf5config-dev (>= 5.7.0~), libkf5configwidgets-dev (>= 5.7.0~), libkf5globalaccel-dev (>= 5.7.0~), libkf5iconthemes-dev (>= 5.7.0~), libkf5itemviews-dev (>= 5.7.0~), libkf5textwidgets-dev (>= 5.7.0~), libkf5windowsystem-dev (>= 5.7.0~), libkf5xmlgui5 (= ${binary:Version}), qtbase5-dev (>= 5.2.0), ${misc:Depends}, ${shlibs:Depends}
 Description: User configurable main windows.
  framework for designing the user interface
  of an application using XML, using the idea
