--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,6 +1,7 @@
 Tests: testsuite
 Depends: @builddeps@, build-essential,
-         xvfb, xauth, dbus-x11, openbox
+         xvfb, xauth, dbus-x11, openbox,
+         libkf5globalaccel-bin
 Restrictions: rw-build-tree
 
 Tests: acc
