--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,5 +1,5 @@
 Tests: testsuite
-Depends: @builddeps@, build-essential,
+Depends: @, @builddeps@, build-essential,
          xvfb, xauth, dbus-x11, openbox,
          libkf5globalaccel-bin
 Restrictions: rw-build-tree
