--- a/debian/control
+++ b/debian/control
@@ -22,8 +22,8 @@ Build-Depends: cmake (>= 2.8.12),
                qtbase5-dev (>= 5.4)
 Standards-Version: 3.9.6
 Homepage: https://projects.kde.org/projects/frameworks/kxmlgui
-Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/frameworks/kxmlgui.git
-Vcs-Git: git://anonscm.debian.org/pkg-kde/frameworks/kxmlgui.git
+Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/frameworks/kxmlgui.git
+Vcs-Git: https://anonscm.debian.org/pkg-kde/frameworks/kxmlgui.git
 
 Package: libkf5xmlgui-dev
 Section: libdevel
