--- a/debian/tests/control
+++ b/debian/tests/control
@@ -2,7 +2,7 @@ Tests: testsuite
 Depends: @, @builddeps@, build-essential,
          xvfb, xauth, dbus (>= 1.8), openbox,
          libkf5globalaccel-bin
-Restrictions: rw-build-tree
+Restrictions: build-needed
 
 Tests: acc
 Depends: @, dh-acc, exuberant-ctags
