--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,9 @@ Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Maximiliano Curia <maxy@debian.org>
 Build-Depends: cmake (>= 3.0~),
                debhelper (>= 9),
+               doxygen,
                extra-cmake-modules (>= 5.37.0~),
+               graphviz,
                libkf5attica-dev (>= 5.37.0~),
                libkf5config-dev (>= 5.37.0~),
                libkf5configwidgets-dev (>= 5.37.0~),
@@ -17,41 +19,15 @@ Build-Depends: cmake (>= 3.0~),
                libkf5textwidgets-dev (>= 5.37.0~),
                libkf5widgetsaddons-dev (>= 5.37.0~),
                libkf5windowsystem-dev (>= 5.37.0~),
+               libqt5sql5-sqlite,
                libqt5x11extras5-dev (>= 5.4),
                pkg-kde-tools (>= 0.15.15ubuntu1~),
-               qtbase5-dev (>= 5.7.0~)
+               qtbase5-dev (>= 5.7.0~),
+               qttools5-dev-tools (>= 5.4),
 Standards-Version: 4.0.0
 Homepage: https://projects.kde.org/projects/frameworks/kxmlgui
 Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/frameworks/kxmlgui.git
 Vcs-Git: https://anonscm.debian.org/git/pkg-kde/frameworks/kxmlgui.git
-
-Package: libkf5xmlgui-dev
-Section: libdevel
-Architecture: any
-Depends: libkf5attica-dev (>= 5.37.0~),
-         libkf5config-dev (>= 5.37.0~),
-         libkf5configwidgets-dev (>= 5.37.0~),
-         libkf5globalaccel-dev (>= 5.37.0~),
-         libkf5iconthemes-dev (>= 5.37.0~),
-         libkf5itemviews-dev (>= 5.37.0~),
-         libkf5textwidgets-dev (>= 5.37.0~),
-         libkf5windowsystem-dev (>= 5.37.0~),
-         libkf5xmlgui5 (= ${binary:Version}),
-         qtbase5-dev (>= 5.7.0~),
-         ${misc:Depends},
-         ${shlibs:Depends}
-Description: User configurable main windows.
- framework for designing the user interface
- of an application using XML, using the idea
- of actions.
- .
- Contains development files for kxmlgui.
-Breaks: kio-dev (<< 5.28),
-        libkf5bookmarks-dev (<< 5.37),
-        libkf5kcmutils-dev (<< 5.37),
-        libkf5kio-dev (<< 5.37),
-        libkf5newstuff-dev (<< 5.37),
-        libkf5parts-dev (<< 5.37)
 
 Package: libkf5xmlgui-bin
 Architecture: any
@@ -74,12 +50,52 @@ Description: User configurable main windows.
  .
  This package contains the data files.
 
+Package: libkf5xmlgui-dev
+Section: libdevel
+Architecture: any
+Depends: libkf5attica-dev (>= 5.37.0~),
+         libkf5config-dev (>= 5.37.0~),
+         libkf5configwidgets-dev (>= 5.37.0~),
+         libkf5globalaccel-dev (>= 5.37.0~),
+         libkf5iconthemes-dev (>= 5.37.0~),
+         libkf5itemviews-dev (>= 5.37.0~),
+         libkf5textwidgets-dev (>= 5.37.0~),
+         libkf5windowsystem-dev (>= 5.37.0~),
+         libkf5xmlgui5 (= ${binary:Version}),
+         qtbase5-dev (>= 5.7.0~),
+         ${misc:Depends},
+         ${shlibs:Depends},
+Recommends: libkf5xmlgui-doc (= ${source:Version})
+Description: User configurable main windows.
+ framework for designing the user interface
+ of an application using XML, using the idea
+ of actions.
+ .
+ Contains development files for kxmlgui.
+Breaks: kio-dev (<< 5.28),
+        libkf5bookmarks-dev (<< 5.37),
+        libkf5kcmutils-dev (<< 5.37),
+        libkf5kio-dev (<< 5.37),
+        libkf5newstuff-dev (<< 5.37),
+        libkf5parts-dev (<< 5.37),
+
+Package: libkf5xmlgui-doc
+Architecture: all
+Multi-Arch: foreign
+Depends: ${misc:Depends}
+Description: User configurable main windows (documentation)
+ framework for designing the user interface
+ of an application using XML, using the idea
+ of actions.
+ .
+ This package contains the qch documentation files.
+
 Package: libkf5xmlgui5
 Architecture: any
 Multi-Arch: same
 Depends: libkf5xmlgui-data (= ${source:Version}),
          ${misc:Depends},
-         ${shlibs:Depends}
+         ${shlibs:Depends},
 Recommends: libkf5xmlgui-bin (= ${binary:Version})
 Description: User configurable main windows.
  framework for designing the user interface
@@ -100,4 +116,4 @@ Breaks: frameworkintegration (<< 5.28),
         libkf5parts5 (<< 5.37),
         libkf5plasma5 (<< 5.37),
         libkf5texteditor5 (<< 5.37),
-        plasma-framework (<< 5.37)
+        plasma-framework (<< 5.37),
