--- a/debian/control
+++ b/debian/control
@@ -73,11 +73,11 @@ Description: User configurable main windows.
  .
  Contains development files for kxmlgui.
 Breaks: kio-dev (<< 5.28),
-        libkf5bookmarks-dev (<< 5.41),
-        libkf5kcmutils-dev (<< 5.41),
-        libkf5kio-dev (<< 5.41),
-        libkf5newstuff-dev (<< 5.41),
-        libkf5parts-dev (<< 5.41),
+        libkf5bookmarks-dev (<< 5.42),
+        libkf5kcmutils-dev (<< 5.42),
+        libkf5kio-dev (<< 5.42),
+        libkf5newstuff-dev (<< 5.42),
+        libkf5parts-dev (<< 5.42),
 
 Package: libkf5xmlgui-doc
 Architecture: all
@@ -103,18 +103,23 @@ Description: User configurable main windows.
  of an application using XML, using the idea
  of actions.
 Breaks: frameworkintegration (<< 5.28),
-        kdesignerplugin (<< 5.41),
-        libkf5bookmarks5 (<< 5.41),
-        libkf5kcmutils5 (<< 5.41),
-        libkf5kdelibs4support5 (<< 5.41),
-        libkf5khtml-bin (<< 5.41),
-        libkf5khtml5 (<< 5.41),
-        libkf5kiofilewidgets5 (<< 5.41),
-        libkf5krossui5 (<< 5.41),
-        libkf5mediaplayer5 (<< 5.41),
-        libkf5newstuff5 (<< 5.41),
-        libkf5parts-plugins (<< 5.41),
-        libkf5parts5 (<< 5.41),
-        libkf5plasma5 (<< 5.41),
-        libkf5texteditor5 (<< 5.41),
-        plasma-framework (<< 5.41),
+        kdesignerplugin (<< 5.42),
+        kross (<< 5.42),
+        ktexteditor-katepart (<< 5.42),
+        libkf5bookmarks5 (<< 5.42),
+        libkf5kcmutils5 (<< 5.42),
+        libkf5kdelibs4support5 (<< 5.42),
+        libkf5kdelibs4support5-bin (<< 5.42),
+        libkf5khtml-bin (<< 5.42),
+        libkf5khtml5 (<< 5.42),
+        libkf5kiofilewidgets5 (<< 5.42),
+        libkf5krossui5 (<< 5.42),
+        libkf5mediaplayer5 (<< 5.42),
+        libkf5newstuff5 (<< 5.42),
+        libkf5parts-plugins (<< 5.42),
+        libkf5parts5 (<< 5.42),
+        libkf5plasma5 (<< 5.42),
+        libkf5plasmaquick5 (<< 5.42),
+        libkf5texteditor5 (<< 5.42),
+        libkf5webkit5 (<< 5.42),
+        plasma-framework (<< 5.42),
